--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Player</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
@@ -17,9 +16,9 @@
       <div class="img-container">
         <img src="img/jacinto-1.jpg" alt="Album Art" />
       </div>
-      <h1 id="title">Electric Chill Machine</h1>
+      <h2 id="title">Electric Chill Machine</h2>
       <h3 id="artist">Jacinto</h3>
-      <audio src="music/jacinto-1.mp3" contorls></audio>
+      <audio src="music/jacinto-1.mp3" controls></audio>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
